--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-I didn't want to make it hello world so i did this instead hopefully it works but lets be honest it won't
+Hey mike i made a website in my nerd class, i'm a better cs major than you, mainly because you're an IT major not a CS major, but that's besides the point
