--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-Hey mike i made a website in my nerd class, i'm a better cs major than you, mainly because you're an IT major not a CS major, but that's besides the point
+<h1>The laziest website ever</h1> I created a website and it's so lazy it's not even funny, i don't know that this will even work
