--- a/index.html
+++ b/index.html
@@ -1,1 +1,42 @@
-<h1>The laziest website ever</h1> I created a website and it's so lazy it's not even funny, i don't know that this will even work
+
+<!DOCTYPE html>
+<html>
+<head>
+<style>
+body {
+    background-color: black;
+}
+
+h1 {
+    color: green;
+    text-align: center;
+}
+
+p {
+    color: blue;
+    font-size: 25px;
+}
+p1 {
+    color: white
+}
+a{
+    color: red;
+    font-size: 35px;
+}
+</style>
+</head>
+<body>
+<h1>My Very nooby Github</h1>
+<p>THis is my github website, since CSE 199 Seminar made me make one.</p>
+<p1> and here is a second line in a different style </p1>
+<br>
+<br>
+<a href="http://xkcd.com">Here's a link to XKCD</a>
+<br> 
+<br>
+<a href="http://steamcommunity.com/id/brin21"> And have a link to my steam </a>
+<p> this is a weird language to learn </p>
+<p1> I may end up using this as a new homepage with links to stuff </p1>
+</body>
+</html>
+
