--- a/index.html
+++ b/index.html
@@ -34,7 +34,11 @@ a{
 <a href="http://xkcd.com">Here's a link to XKCD</a>
 <br> 
 <br>
-<a href="http://steamcommunity.com/id/brin21"> And have a link to my steam </a>
+<p1> Click on my face for a link to steam</p1>
+<br>
+<a href="http://steamcommunity.com/id/brin21">
+<img src="zergface.png" alt="zergface" style=";">
+</a>
 <p> this is a weird language to learn </p>
 <p1> I may end up using this as a new homepage with links to stuff </p1>
 </body>
