--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@ p1 {
     color: white
 }
 a{
-    color: red;
-    font-size: 35px;
+    color: cyan;
+    font-size: 25px;
 }
 </style>
 </head>
@@ -37,7 +37,7 @@ a{
 <p1> Click on my face for a link to steam</p1>
 <br>
 <a href="http://steamcommunity.com/id/brin21">
-<img src="zergface.png" alt="zergface" style=";">
+<img src="zergface.png" alt="zergface" style="width:100px;height:100px;border:0;">
 </a>
 <p> this is a weird language to learn </p>
 <p1> I may end up using this as a new homepage with links to stuff </p1>
