--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ a{
 </head>
 <body>
 <h1>My Very nooby Github</h1>
-<p>THis is my github website, since CSE 199 Seminar made me make one.</p>
+<p>This is my github website, since CSE 199 Seminar made me make one.</p>
 <p1> and here is a second line in a different style </p1>
 <br>
 <br>
@@ -37,10 +37,10 @@ a{
 <p1> Click on my face for a link to steam</p1>
 <br>
 <a href="http://steamcommunity.com/id/brin21">
-<img src="zergface.png" alt="zergface" style="width:100px;height:100px;border:0;">
+<img src="zergface.png" alt="zergface" style="width:150px;height:150px;border:0;">
 </a>
-<p> this is a weird language to learn </p>
-<p1> I may end up using this as a new homepage with links to stuff </p1>
+<p> This was an interesting language to learn </p>
+<p1> I Should make this into a homepage for my own PC's </p1>
 </body>
 </html>
 
