--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html>
+<head>
+<link rel="shortcut icon" href="america.ico" />
 <title>Brian Fenster's Site</title>
+</head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
- <link rel="stylesheet" href="w3.css">
-<link rel="stylesheet" href="http://www.w3schools.com/lib/w3.css">
-<link rel="stylesheet" href="http://www.w3schools.com/lib/w3-theme-black.css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
+<link rel="stylesheet" href="w3.css">
+<link rel="stylesheet" href="font1.css">
+<link rel="stylesheet" href="font2.css">
+<link rel="stylesheet" href="w3black.css">
 <style>
 html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 .w3-sidenav a,.w3-sidenav h4 {padding: 12px;}
@@ -23,13 +25,11 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
     <li class="w3-opennav w3-right w3-hide-large">
       <a class="w3-hover-white w3-large w3-theme-l1" href="javascript:void(0)" onclick="w3_open()"><i class="fa fa-bars"></i></a>
     </li>
-    <li><a href="#" class="w3-theme-l1">Home</a></li>
+    <li><a href="https://bfenster.github.io" class="w3-theme-l1">Home</a></li>
     <li class="w3-hide-small"><a href="#" class="w3-hover-white">CSE 199</a></li>
     <li class="w3-hide-small"><a href="#" class="w3-hover-white">CSE 111</a></li>
     <li class="w3-hide-small"><a href="#" class="w3-hover-white">ENG 105</a></li>
-    <li class="w3-hide-small"><a href="#" class="w3-hover-white">Everything Else</a></li>
-    <li class="w3-hide-medium w3-hide-small"><a href="#" class="w3-hover-white">Clients</a></li>
-    <li class="w3-hide-medium w3-hide-small"><a href="#" class="w3-hover-white">Partners</a></li>
+    <li class="w3-hide-small"><a href="old.html" class="w3-hover-white">Everything Else</a></li>
   </ul>
 </div>
 
@@ -41,8 +41,8 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
       <p>For CSE 199, there is a Resume type page which is easily linked to either in this paragraph, as either of the images to my right, or on the top navbar, all of which are here to help make this page look and function nicely </p>
     </div>
     <div class="w3-third w3-container">
-      <p class="w3-border w3-padding-large w3-padding-32 w3-center">AD</p>
-      <p class="w3-border w3-padding-large w3-padding-64 w3-center">AD</p>
+      <p class="w3-border w3-padding-large w3-padding-32 w3-center">TEMP</p>
+      <p class="w3-border w3-padding-large w3-padding-64 w3-center">MORETEMP</p>
     </div>
   </div>
 
@@ -68,7 +68,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
     </div>
   </div>
 
-=
+
 
     <div class="w3-container w3-theme-l1">
       <p>Powered by <a href="http://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
@@ -78,30 +78,6 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 <!-- END MAIN -->
 </div>
 
-<script>
-// Get the Sidenav
-var mySidenav = document.getElementById("mySidenav");
-
-// Get the DIV with overlay effect
-var overlayBg = document.getElementById("myOverlay");
-
-// Toggle between showing and hiding the sidenav, and add overlay effect
-function w3_open() {
-    if (mySidenav.style.display === 'block') {
-        mySidenav.style.display = 'none';
-        overlayBg.style.display = "none";
-    } else {
-        mySidenav.style.display = 'block';
-        overlayBg.style.display = "block";
-    }
-}
-
-// Close the sidenav with the close button
-function w3_close() {
-    mySidenav.style.display = "none";
-    overlayBg.style.display = "none";
-}
-</script>
 
 </body>
 </html>
