--- a/CSE111.html
+++ b/CSE111.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <link rel="shortcut icon" href="america.ico" />
-<title>Brian Fenster's Site</title>
+<title>CSE 111 project</title>
 </head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="w3.css">
@@ -37,8 +37,8 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 
   <div class="w3-row w3-padding-64">
     <div class="w3-twothird w3-container">
-      <h1 class="w3-text-blue">CSE 199</h1>
-      <p>For CSE 199, there is a Resume type page which is easily linked to either in this paragraph, as either of the images to my right, or on the top navbar, all of which are here to help make this page look and function nicely </p>
+      <h1 class="w3-text-blue">PAGE FOR CSE 111</h1>
+      <p>I'll just pull everything i don't need out of here once i finish the home page </p>
     </div>
     <div class="w3-third w3-container">
       <p class="w3-border w3-padding-large w3-padding-32 w3-center">TEMP</p>
