--- a/old.html
+++ b/old.html
@@ -1,47 +1,70 @@
-
 <!DOCTYPE html>
 <html>
 <head>
-<title>  Brian Fenster's site </title>
+<link rel="shortcut icon" href="america.ico" />
+<title>Brian Fenster's Site</title>
+</head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="w3.css">
+<link rel="stylesheet" href="font1.css">
+<link rel="stylesheet" href="font2.css">
+<link rel="stylesheet" href="w3black.css">
 <style>
-body {
-    background-color: black;
-}
-
-h1 {
-    color: green;
-    text-align: center;
-}
-
-p {
-    color: blue;
-    font-size: 25px;
-}
-p1 {
-    color: white
-}
-a{
-    color: cyan;
-    font-size: 25px;
+html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
+.w3-sidenav a,.w3-sidenav h4 {padding: 12px;}
+.w3-navbar li a {
+    padding-top: 12px;
+    padding-bottom: 12px;
 }
 </style>
-</head>
 <body>
-<h1>My Very nooby Github</h1>
-<p>This is my github website, since CSE 199 Seminar made me make one.</p>
-<p1> and here is a second line in a different style </p1>
-<br>
-<br>
-<a href="http://xkcd.com">Here's a link to XKCD</a>
-<br> 
-<br>
-<p1> Click on my face for a link to steam</p1>
-<br>
-<a href="http://steamcommunity.com/id/brin21">
-<img src="zergface.png" alt="zergface" style="width:150px;height:150px;border:0;">
-</a>
-<p> This was an interesting language to learn </p>
-<p1> I Should make this into a homepage for my own PC's </p1>
+
+<!-- Navbar -->
+<div class="w3-top">
+  <ul class="w3-navbar w3-theme w3-top w3-left-align w3-large">
+    <li class="w3-opennav w3-right w3-hide-large">
+      <a class="w3-hover-white w3-large w3-theme-l1" href="javascript:void(0)" onclick="w3_open()"><i class="fa fa-bars"></i></a>
+    </li>
+    <li><a href="https://bfenster21.github.io" class="w3-theme-l1">Home</a></li>
+    <li class="w3-hide-small"><a href="CSE199.html" class="w3-hover-white">CSE 199</a></li>
+    <li class="w3-hide-small"><a href="CSE111.html" class="w3-hover-white">CSE 111</a></li>
+    <li class="w3-hide-small"><a href="ENG105.html" class="w3-hover-white">ENG 105</a></li>
+    <li class="w3-hide-small"><a href="old.html" class="w3-hover-white">Everything Else</a></li>
+  </ul>
+</div>
+
+
+
+  <div class="w3-row w3-padding-64">
+    <div class="w3-twothird w3-container">
+      <h1 class="w3-text-blue">Sources</h1>
+      <p>This webpage was made using Notepad++, W3schools as a template, and is hosted by Github </p>
+    </div>
+    
+  </div>
+
+  <div class="w3-row">
+    <div class="w3-twothird w3-container">
+      <h1 class="w3-text-teal">Contact Information</h1>
+      <p> <a href=mailto:bfenster@buffalo.edu Click here to send me an Email></a>) </p>
+    </div>
+    <div class="w3-third w3-container">
+      <p class="w3-border w3-padding-large w3-padding-64 w3-center">I have an idea for something here</p>
+      <p class="w3-border w3-padding-large w3-padding-64 w3-center">And delete this</p>
+    </div>
+  </div>
+
+
+
+
+    <div class="w3-container w3-theme-l1">
+      <p>Powered by <a href="http://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a> and Github</p>
+    </div>
+  </footer>
+
+<!-- END MAIN -->
+</div>
+
+
 </body>
 </html>
-
