--- a/old.html
+++ b/old.html
@@ -26,10 +26,10 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
       <a class="w3-hover-white w3-large w3-theme-l1" href="javascript:void(0)" onclick="w3_open()"><i class="fa fa-bars"></i></a>
     </li>
     <li><a href="https://bfenster21.github.io" class="w3-theme-l1">Home</a></li>
-    <li class="w3-hide-small"><a href="CSE199.html" class="w3-hover-white">CSE 199</a></li>
-    <li class="w3-hide-small"><a href="CSE111.html" class="w3-hover-white">CSE 111</a></li>
-    <li class="w3-hide-small"><a href="ENG105.html" class="w3-hover-white">ENG 105</a></li>
-    <li class="w3-hide-small"><a href="old.html" class="w3-hover-white">Everything Else</a></li>
+    <li><a href="CSE199.html" class="w3-hover-white">CSE 199</a></li>
+    <li><a href="CSE111.html" class="w3-hover-white">CSE 111</a></li>
+    <li><a href="ENG105.html" class="w3-hover-white">ENG 105</a></li>
+    <li><a href="old.html" class="w3-hover-white">Everything Else</a></li>
   </ul>
 </div>
 
@@ -37,24 +37,31 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 
   <div class="w3-row w3-padding-64">
     <div class="w3-twothird w3-container">
-      <h1 class="w3-text-blue">Sources</h1>
-      <p>This webpage was made using Notepad++, W3schools as a template, and is hosted by Github </p>
+      <h1 class="w3-text-blue">Contact</h1>
+	  <p> <a href=mailto:bfenster@buffalo.edu> Click here to send me an Email </a>	<br> I don't really have any other way for you to send me contact information</p>
     </div>
     
   </div>
 
   <div class="w3-row">
     <div class="w3-twothird w3-container">
-      <h1 class="w3-text-teal">Contact Information</h1>
-      <p> <a href=mailto:bfenster@buffalo.edu Click here to send me an Email></a>) </p>
-    </div>
+      <h1 class="w3-text-teal">Who Am I</h1>
+      <p> I am brian Fenster, an at the time 18 year old Freshman CS student at <a href="http://www.buffalo.edu">UB</a> 
+	  <br> This page was made since multiple classes (the ones listed) required a webpage to be made </p>
+		
+	</div>
     <div class="w3-third w3-container">
       <p class="w3-border w3-padding-large w3-padding-64 w3-center">I have an idea for something here</p>
-      <p class="w3-border w3-padding-large w3-padding-64 w3-center">And delete this</p>
     </div>
   </div>
 
-
+  <div class="w3-row w3-padding-64">
+    <div class="w3-twothird w3-container">
+      <h1 class="w3-text-blue">Sources</h1>
+      <p>This webpage was made using Notepad++, W3schools as a template, and is hosted by Github <br> I learned most of this in CSE 111, CSE 199, W3schools, and from the friends I made </p>
+    </div>
+    
+  </div>
 
 
     <div class="w3-container w3-theme-l1">
@@ -64,7 +71,5 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 
 <!-- END MAIN -->
 </div>
-
-
 </body>
 </html>
