--- a/CSE111.html
+++ b/CSE111.html
@@ -26,10 +26,10 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
       <a class="w3-hover-white w3-large w3-theme-l1" href="javascript:void(0)" onclick="w3_open()"><i class="fa fa-bars"></i></a>
     </li>
     <li><a href="https://bfenster21.github.io" class="w3-theme-l1">Home</a></li>
-    <li class="w3-hide-small"><a href="CSE199.html" class="w3-hover-white">CSE 199</a></li>
-    <li class="w3-hide-small"><a href="CSE111.html" class="w3-hover-white">CSE 111</a></li>
-    <li class="w3-hide-small"><a href="ENG105.html" class="w3-hover-white">ENG 105</a></li>
-    <li class="w3-hide-small"><a href="old.html" class="w3-hover-white">Everything Else</a></li>
+    <li><a href="CSE199.html" class="w3-hover-white">CSE 199</a></li>
+    <li><a href="CSE111.html" class="w3-hover-white">CSE 111</a></li>
+    <li><a href="ENG105.html" class="w3-hover-white">ENG 105</a></li>
+    <li><a href="old.html" class="w3-hover-white">Everything Else</a></li>
   </ul>
 </div>
 
@@ -37,37 +37,29 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 
   <div class="w3-row w3-padding-64">
     <div class="w3-twothird w3-container">
-      <h1 class="w3-text-blue">PAGE FOR CSE 111</h1>
-      <p>I'll just pull everything i don't need out of here once i finish the home page </p>
+      <h1 class="w3-text-blue">CSE 111</h1>
+      <p>This is appropriate page for CSE 111, <br> <a href="http://www.buffalo.edu/bfenster/cse-111/">This is a link to it sourced at UB</a></p>
     </div>
     <div class="w3-third w3-container">
-      <p class="w3-border w3-padding-large w3-padding-32 w3-center">TEMP</p>
-      <p class="w3-border w3-padding-large w3-padding-64 w3-center">MORETEMP</p>
+      <p class="w3-border w3-padding-large w3-padding-64 w3-center">"ublogo.gif"</p>
     </div>
   </div>
 
   <div class="w3-row">
     <div class="w3-twothird w3-container">
-      <h1 class="w3-text-teal">CSE 111</h1>
-      <p>We don't know what the CSE 111 project will be, but I may just copypasta this here index to make it the webpage hosted on the CSE servers instead of Github. Also windows github hates this</p>
-    </div>
-    <div class="w3-third w3-container">
-      <p class="w3-border w3-padding-large w3-padding-32 w3-center">I'll stick a logo here</p>
-      <p class="w3-border w3-padding-large w3-padding-64 w3-center">And delete this</p>
-    </div>
-  </div>
-
-  <div class="w3-row w3-padding-64">
-    <div class="w3-twothird w3-container">
-      <h1 class="w3-text-green">ENG 105</h1>
-      <p>There was latin here, now there isn't, but i will link this site to him, with a link as the heading and a link in the top bar thingy, and possibly a logo on the side</p>
-    </div>
-    <div class="w3-third w3-container">
-      <p class="w3-border w3-padding-large w3-padding-32 w3-center">I can stick a picture here</p>
-      <p class="w3-border w3-padding-large w3-padding-64 w3-center">And Here</p>
-    </div>
-  </div>
-
+      <h1 class="w3-text-teal">The webpage Requirements</h1>
+      <p> An image <br>
+	Variations <br>
+	Horizontal rule <br>
+	Background color <br>
+	Link  <br>
+	Picture <br>
+	Email <br>
+	Keyword <br>
+	Table<br>
+	<a href="cse1112.html">This is a link to it sourced on github</a>
+	</p>
+</div>
 
 
     <div class="w3-container w3-theme-l1">
