--- a/ENG105.html
+++ b/ENG105.html
@@ -26,10 +26,10 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
       <a class="w3-hover-white w3-large w3-theme-l1" href="javascript:void(0)" onclick="w3_open()"><i class="fa fa-bars"></i></a>
     </li>
     <li><a href="https://bfenster21.github.io" class="w3-theme-l1">Home</a></li>
-    <li class="w3-hide-small"><a href="CSE199.html" class="w3-hover-white">CSE 199</a></li>
-    <li class="w3-hide-small"><a href="CSE111.html" class="w3-hover-white">CSE 111</a></li>
-    <li class="w3-hide-small"><a href="ENG105.html" class="w3-hover-white">ENG 105</a></li>
-    <li class="w3-hide-small"><a href="old.html" class="w3-hover-white">Everything Else</a></li>
+    <li><a href="CSE199.html" class="w3-hover-white">CSE 199</a></li>
+    <li><a href="CSE111.html" class="w3-hover-white">CSE 111</a></li>
+    <li><a href="ENG105.html" class="w3-hover-white">ENG 105</a></li>
+    <li><a href="old.html" class="w3-hover-white">Everything Else</a></li>
   </ul>
 </div>
 
