--- a/CSE111.html
+++ b/CSE111.html
@@ -60,6 +60,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 	<a href="cse1112.html">This is a link to it sourced on github</a>
 	</p>
 </div>
+</div>
 
 
     <div class="w3-container w3-theme-l1">
