--- a/CSE111.html
+++ b/CSE111.html
@@ -40,10 +40,8 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
       <h1 class="w3-text-blue">CSE 111</h1>
       <p>This is appropriate page for CSE 111, <br> <a href="http://www.buffalo.edu/bfenster/cse-111/">This is a link to it sourced at UB</a></p>
     </div>
-    <div class="w3-third w3-container">
-      <p class="w3-border w3-padding-large w3-padding-64 w3-center">"ublogo.gif"</p>
-    </div>
-  </div>
+ <img src="ublogo.gif" alt="UB LOGO">
+ </div>
 
   <div class="w3-row">
     <div class="w3-twothird w3-container">
@@ -58,6 +56,8 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 	Keyword <br>
 	Table<br>
 	<a href="cse1112.html">This is a link to it sourced on github</a>
+	<br> This is totally not text to take up more room
+
 	</p>
 </div>
 </div>
