--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
       <a class="w3-hover-white w3-large w3-theme-l1" href="javascript:void(0)" onclick="w3_open()"><i class="fa fa-bars"></i></a>
     </li>
     <li><a href="https://bfenster21.github.io" class="w3-theme-l1">Home</a></li>
-    <li><a href="CSE199.html" class="w3-hover-white">CSE 199</a></li>
-    <li><a href="CSE111.html" class="w3-hover-white">CSE 111</a></li>
-    <li><a href="ENG105.html" class="w3-hover-white">ENG 105</a></li>
-    <li><a href="old.html" class="w3-hover-white">Everything Else</a></li>
+    <li class="w3-hide-small"><a href="CSE199.html" class="w3-hover-white">CSE 199</a></li>
+    <li class="w3-hide-small"><a href="CSE111.html" class="w3-hover-white">CSE 111</a></li>
+    <li class="w3-hide-small"><a href="ENG105.html" class="w3-hover-white">ENG 105</a></li>
+    <li class="w3-hide-small"><a href="else.html" class="w3-hover-white">Everything Else</a></li>
   </ul>
 </div>
 
@@ -37,7 +37,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 
   <div class="w3-row w3-padding-64">
     <div class="w3-twothird w3-container">
-      <h1 class="w3-text-blue">CSE 199</h1>
+      <h1 class="w3-text-blue"><a href="CSE199.html">CSE 199</a></h1>
       <p>For CSE 199, there is a Resume type page which is easily linked to either in this paragraph, as either of the images to my right, or on the top navbar, all of which are here to help make this page look and function nicely </p>
     </div>
     <div class="w3-third w3-container">
@@ -48,7 +48,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 
   <div class="w3-row">
     <div class="w3-twothird w3-container">
-      <h1 class="w3-text-teal">CSE 111</h1>
+      <h1 class="w3-text-teal"><a href="CSE111.html">CSE 111</a></h1>
       <p>We don't know what the CSE 111 project will be, but I may just copypasta this here index to make it the webpage hosted on the CSE servers instead of Github. Also windows github hates this</p>
     </div>
     <div class="w3-third w3-container">
@@ -59,7 +59,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 
   <div class="w3-row w3-padding-64">
     <div class="w3-twothird w3-container">
-      <h1 class="w3-text-green">ENG 105</h1>
+      <h1 class="w3-text-green"><a href="ENG105.html">ENG 105</a></h1>
       <p>There was latin here, now there isn't, but i will link this site to him, with a link as the heading and a link in the top bar thingy, and possibly a logo on the side</p>
     </div>
     <div class="w3-third w3-container">
@@ -71,7 +71,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 
 
     <div class="w3-container w3-theme-l1">
-      <p>Powered by <a href="http://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a> and Github</p>
+      <p><a href="else.html">Contact And Credits</a></p>
     </div>
   </footer>
 
