--- a/else.html
+++ b/else.html
@@ -46,7 +46,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
   <div class="w3-row">
     <div class="w3-twothird w3-container">
       <h1 class="w3-text-teal">Who Am I</h1>
-      <p> I am brian Fenster, an at the time 18 year old Freshman CS student at <a href="http://www.buffalo.edu">UB</a> 
+      <p> I am Brian Fenster, an at the time 18 year old Freshman CS student at <a href="http://www.buffalo.edu">UB</a> 
 	  <br> This page was made since multiple classes (the ones listed) required a webpage to be made </p>
 		
 	</div>
