--- a/index.html
+++ b/index.html
@@ -40,10 +40,9 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
       <h1 class="w3-text-blue"><a href="CSE199.html">CSE 199</a></h1>
       <p>For CSE 199, there is a Resume type page which is easily linked to either in this paragraph, as either of the images to my right, or on the top navbar, all of which are here to help make this page look and function nicely </p>
     </div>
-    <div class="w3-third w3-container">
-      <p class="w3-border w3-padding-large w3-padding-32 w3-center">TEMP</p>
-      <p class="w3-border w3-padding-large w3-padding-64 w3-center">MORETEMP</p>
-    </div>
+ <a href="CSE199.html">
+<img src="199.png" alt="why did you mouse over this" style="width:350px;height:150px;border:0;" >
+</a>
   </div>
 
   <div class="w3-row">
@@ -51,21 +50,21 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
       <h1 class="w3-text-teal"><a href="CSE111.html">CSE 111</a></h1>
       <p>We don't know what the CSE 111 project will be, but I may just copypasta this here index to make it the webpage hosted on the CSE servers instead of Github. Also windows github hates this</p>
     </div>
-    <div class="w3-third w3-container">
-      <p class="w3-border w3-padding-large w3-padding-32 w3-center">I'll stick a logo here</p>
-      <p class="w3-border w3-padding-large w3-padding-64 w3-center">And delete this</p>
-    </div>
+ <a href="CSE111.html">
+<img src="ublogo.gif" alt="ublogo" >
+</a>
   </div>
 
   <div class="w3-row w3-padding-64">
     <div class="w3-twothird w3-container">
       <h1 class="w3-text-green"><a href="ENG105.html">ENG 105</a></h1>
-      <p>There was latin here, now there isn't, but i will link this site to him, with a link as the heading and a link in the top bar thingy, and possibly a logo on the side</p>
+      <p>For english 105, I have made an annotated Bibliography, and the Title is a link to it, as is the logo to the right<br> 
+	  The Annotated Bibliography will have 5 sources with 200 word blurbs about each source, and they are being used for my research paper on NASA and the economy
+	  <br> </p>
     </div>
-    <div class="w3-third w3-container">
-      <p class="w3-border w3-padding-large w3-padding-32 w3-center">I can stick a picture here</p>
-      <p class="w3-border w3-padding-large w3-padding-64 w3-center">And Here</p>
-    </div>
+ <a href="ENG105.html">
+<img src="nasalogo.jpg" alt="nasalogo" >
+</a>
   </div>
 
 
