--- a/CSE111.html
+++ b/CSE111.html
@@ -38,7 +38,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
   <div class="w3-row w3-padding-64">
     <div class="w3-twothird w3-container">
       <h1 class="w3-text-blue">CSE 111</h1>
-      <p>This is appropriate page for CSE 111, <br> <a href="http://www.acsu.buffalo.edu/~bfenster/cse-111.html">This is a link to it sourced at UB</a></p>
+      <p>This is appropriate page for CSE 111, <br> <a href="http://www.acsu.buffalo.edu/~bfenster/cse-111">This is a link to it sourced at UB</a></p>
     </div>
  <a href="http://www.cse.buffalo.edu/~kds/cse-111/">
 <img src="ublogo.gif" alt="ublogo" >
