--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
   <div class="w3-row">
     <div class="w3-twothird w3-container">
       <h1 class="w3-text-teal"><a href="CSE111.html">CSE 111</a></h1>
-      <p>We don't know what the CSE 111 project will be, but I may just copypasta this here index to make it the webpage hosted on the CSE servers instead of Github. Also windows github hates this</p>
+      <p>For CSE 111, we had a checklist to make a website hit the minimums on, and since size is a constraint, mine is rather small
+	   and mine also is hosted both through github and through UB, which is shown on the class page.</p>
     </div>
  <a href="CSE111.html">
 <img src="ublogo.gif" alt="ublogo" >
@@ -66,9 +67,6 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 <img src="nasalogo.jpg" alt="nasalogo" >
 </a>
   </div>
-
-
-
     <div class="w3-container w3-theme-l1">
       <p><a href="else.html">Contact And Credits</a></p>
     </div>
