--- a/CSE199.html
+++ b/CSE199.html
@@ -38,37 +38,11 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
   <div class="w3-row w3-padding-64">
     <div class="w3-twothird w3-container">
       <h1 class="w3-text-blue">CSE 199</h1>
-      <p>Same thing as the other pages, proof of concept right now </p>
-    </div>
-    <div class="w3-third w3-container">
-      <p class="w3-border w3-padding-large w3-padding-32 w3-center">TEMP</p>
-      <p class="w3-border w3-padding-large w3-padding-64 w3-center">MORETEMP</p>
+      <p>This page will be reworked into a resume type page, for this class and impact on internet
+	  <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+	  <br><br><br><br><br><br><br><br><br><br><br><br><br>I added a bunch of BR's to space this out</p>
     </div>
   </div>
-
-  <div class="w3-row">
-    <div class="w3-twothird w3-container">
-      <h1 class="w3-text-teal">CSE 111</h1>
-      <p>We don't know what the CSE 111 project will be, but I may just copypasta this here index to make it the webpage hosted on the CSE servers instead of Github. Also windows github hates this</p>
-    </div>
-    <div class="w3-third w3-container">
-      <p class="w3-border w3-padding-large w3-padding-32 w3-center">I'll stick a logo here</p>
-      <p class="w3-border w3-padding-large w3-padding-64 w3-center">And delete this</p>
-    </div>
-  </div>
-
-  <div class="w3-row w3-padding-64">
-    <div class="w3-twothird w3-container">
-      <h1 class="w3-text-green">ENG 105</h1>
-      <p>There was latin here, now there isn't, but i will link this site to him, with a link as the heading and a link in the top bar thingy, and possibly a logo on the side</p>
-    </div>
-    <div class="w3-third w3-container">
-      <p class="w3-border w3-padding-large w3-padding-32 w3-center">I can stick a picture here</p>
-      <p class="w3-border w3-padding-large w3-padding-64 w3-center">And Here</p>
-    </div>
-  </div>
-
-
 
     <div class="w3-container w3-theme-l1">
       <p><a href="else.html">Contact And Credits</a></p>
