--- a/CSE199.html
+++ b/CSE199.html
@@ -39,9 +39,9 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
     <div class="w3-twothird w3-container">
       <h1 class="w3-text-blue">Resume</h1>
       <p>Brian Fenster <br> 426a Spaulding Quadrangle University at Buffalo, Buffalo, New York, 14261 | 845-490-2048 | bfenster21@gmail.com
-		<br> <br> <b>Career Goals<b> Freshman College student studying for a BS in Computer Science at The University at Buffalo. Aiming for work in embedded systems and systems development, Eager to learn new coding languages
-	 <br><br> <b> Education <b> Studying Computer Science at The University at Buffalo, enrolled in Introductory Computer science courses, and Taking Data Structures next semester
-	 <br><br> <b> Additional skills: <b>
+		<br> <br> <b>Career Goals:</b> Freshman College student studying for a BS in Computer Science at The University at Buffalo. Aiming for work in embedded systems and systems development, Eager to learn new coding languages
+	 <br><br> <b> Education: <b/> Studying Computer Science at The University at Buffalo, enrolled in Introductory Computer science courses, and Taking Data Structures next semester
+	 <br><br> <b> Additional skills: <b/>
 	<br>2 years’ experience as a Cashier at Stop and Shop, with training for front end manager position (ASCDH) 
 	<br>Basic knowledge of Modern personal computers. Can install or replace most hardware inside of a desktop workstation, with appropriate Driver install. Basic computer repair knowledge 
 	<br>Basic Knowledge of Excel 
