unkown if working

--- a/ENG105.html
+++ b/ENG105.html
@@ -35,44 +35,54 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 
 
 
-  <div class="w3-row w3-padding-64">
+  <div class="w3-row w3-padding-32">
     <div class="w3-twothird w3-container">
       <h1 class="w3-text-blue">ENG 105</h1>
-      <p>I'm going to make this into a annotated bibliography  </p>
+      <p>Annotated Bibliography </p>
     </div>
 
   </div>
 
   <div class="w3-row">
     <div class="w3-twothird w3-container">
-      <h1 class="w3-text-green">So I was thinking I could make 5 of these</h1>
-      <p>with the title as a link to the source, and then this be the paragraphy, and incluse a BR in here for the source</p>
+      <h1 class="w3-text-green"><a href="https://www.nasa.gov/offices/oct/tech_transfer/economic_impacts.html" >NASA's website </a> </h1>
+      <p>Nasa’s own website lists several useful pieces of information about their spending, where the money is spent, and how the money is spent. Each individual state can be checked for NASA spending yearly easily, using the build in map button. There are links to PDF’s for each state to detail how NASA spend their money specifically in each state. The source easily and clearly shows how much of NASA’s budget is spent on each state. The source is obviously unbiased, as It’s simply direct data published by NASA, which is a federal organization. The information provided is shown in a simple manner, and is well organized, and is a primary source, so fact checking isn’t really needed. This source was included entirely for the statistics in the paper, and how I could apply the statistics easily. The source is up to date by almost all standards, since it us updated by NASA once their proposition to congress is approved, so that way they can spend their funds given by the Federal Government on projects they want. The site also lists several benefits from technology that NASA provides in our daily lives.
+	  <br>Dunbar, Brian. "NASA's Innovation Impacts Across the U.S." NASA. NASA, 2012. Web. 14 Nov. 2016.
+	  </p>
     </div>
       </div>
 
-  <div class="w3-row w3-padding-64">
+  <div class="w3-row w3-padding-32">
     <div class="w3-twothird w3-container">
-      <h1 class="w3-text-green">So this would be source two</h1>
-      <p>and this would be the wall of text that I was talking about, except again</p>
+      <h1 class="w3-text-green"><a href= http://permanent.access.gpo.gov/LPS111383/LPS111383_04-15-NASA.pdf"> Congress's budget plans for NASA </a> </h1>
+      <p>The Budgetary Implications of NASA’s Current Plans for Space Exploration: this is a PDF published by congress showing highly detailed plans for NASA’s federal budget in the coming years. The Paper includes Detailed plans for the Orion Capsule development and testing, with a diagram of it on two different launch systems, as well as a theoretical lunar lander. The paper was published in 2009, and shows several different scenarios with different budgets given to NASA for this project. All of these schedules are off by a wide margin, as they include ISS support ending in 2015, and yet we have continued service for the ISS into 2020. There are several contingency plans for NASA. The paper then shows serval graphs, which break up the estimated budget into different costs and what they will be used for, and how this 2009 stimulus will benefit research. The paper also includes the space shuttle’s retirement and how that will expand NASA’s budget. It also reviews the Orion spending plan compared to other ways of using the budget, and how the costs are expected to rise as time goes on. The paper supports the statement with a graph showing how the past 72 projects have grown beyond their allocated budget. The paper also includes the “slowest case” scenario, which extends the space shuttle to 2015 (did not happen) and the ISS to 2020 (did happen) 
+	  <br> United States. Congressional Budget Office. The Budgetary Implications of NASA's Current Plans for Space Exploration. Washington, D.C: Congressional Budget Office, 2009. University At Buffalo Libraries. Web. 15 Nov. 2016.
+	  </p>
     </div>
   </div>
-  <div class="w3-row w3-padding-64">
+  <div class="w3-row w3-padding-32">
     <div class="w3-twothird w3-container">
-      <h1 class="w3-text-green">So this would be source three</h1>
-      <p>and this would be the wall of text that I was talking about, except again</p>
+      <h1 class="w3-text-green"><a href=" https://www.nasa.gov/sites/default/files/files/SEINSI.pdf"> A NASA Press conference </a> </h1>
+      <p>This source is a PDF of a presentation sheet that was at a NASA press conference. The first page is an infographic with statistics about NASA spending on different industries in the US, such as research, manufacturing, as well as other industries. The Presentation then shows how NASA’s budget is broken down in general, which is 80% to NASA exclusive programs, such as research, space programs, and such. The other 20% is spent on programs that are shared with other agencies (like the air force) and Educational programs. Most of NASA’s budget that is spent on exclusive programs is spent on research, which is made public and free shortly after it is completed and checked. The document Covers more parts of NASA’s spending on programs and specifically breaks down costs of each program. It also goes into new research such as Nanotechnology and robots for the research section. It then breaks down the Manufacturing part of the budget, which Is quite large, since building massive telescopes and rockets takes a significant amount of time and money. 
+	<br>The Tauri Group. “NASA Socio-Economic Impacts.” NASA Socio-Economic Impacts, NASA, Apr. 2013, www.nasa.gov/sites/default/files/files/SEINSI.pdf. 
+	  <br> https://www.nasa.gov/sites/default/files/files/SEINSI.pdf
+	  </p>
     </div>
   </div> 
-  <div class="w3-row w3-padding-64">
+  <div class="w3-row w3-padding-32">
     <div class="w3-twothird w3-container">
-      <h1 class="w3-text-green">So this would be source four</h1>
-      <p>and this would be the wall of text that I was talking about, except again</p>
+      <h1 class="w3-text-green"><a href= "http://www.history.com/topics/apollo-11" >History Channel Apollo 11 </a></h1>
+      <p>and this would be the wall of text that I was talking about, except again
+	  <br> History.com Staff. “Apollo 11.” History.com, A&E Television Networks, 2010, www.history.com/topics/apollo-11. 
+	  </p>
     </div>
   </div>
-  <div class="w3-row w3-padding-64">
+  <div class="w3-row w3-padding-32">
     <div class="w3-twothird w3-container">
-      <h1 class="w3-text-green">So this would be source Five</h1>
+      <h1 class="w3-text-green"><a href= "http://www.businessinsider.com/everyday-items-developed-by-nasa-2012-8"> Buisness Insider List of benefits </a> </h1>
       <p>and this would be the wall of text that I was talking about, except again, again</p>
-    </div>
+	  <br> Spector, Dina. “20 Everyday Things We Have Because Of NASA.” Business Insider, Business Insider, Inc, July 2012, www.businessinsider.com/everyday-items-developed-by-nasa-2012-8. 
+	</div>
   </div>
 
 
