unkown if working

--- a/ENG105.html
+++ b/ENG105.html
@@ -35,7 +35,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 
 
 
-  <div class="w3-row w3-padding-32">
+  <div class="w3-row w3-padding-64">
     <div class="w3-twothird w3-container">
       <h1 class="w3-text-blue">ENG 105</h1>
       <p>Annotated Bibliography </p>
@@ -72,7 +72,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
   <div class="w3-row w3-padding-32">
     <div class="w3-twothird w3-container">
       <h1 class="w3-text-green"><a href= "http://www.history.com/topics/apollo-11" >History Channel Apollo 11 </a></h1>
-      <p>and this would be the wall of text that I was talking about, except again
+      <p>The Apollo program is a huge example of NASA Benefitting all of mankind, as the sheer amount of hours poured into the program provided thousands of jobs across the US. This source provides an in depth account of many of the benefits and what we learned from the mission. The article also goes into detail about the mission itself, and how it helped benefit mankind. The source starts with the background of the Apollo program, starting with the ideas behind it as well as how the funding was obtained, and the US mission goals. It then goes into the mission itself, the days before the launch, and how the crew felt. The article then details the launch of the Apollo crew towards the moon, and as well as once Neil Armstrong landed on the moon. The source then ends shortly after, with the following Apollo missions listed in minor detail. This source is relatively new, and is through History.com, which is a fairly reputable source. The source has more links on the page itself leading to different pages that have to do with space exploration and NASA in general, and those could easily be used. 
 	  <br> History.com Staff. “Apollo 11.” History.com, A&E Television Networks, 2010, www.history.com/topics/apollo-11. 
 	  </p>
     </div>
@@ -80,8 +80,9 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
   <div class="w3-row w3-padding-32">
     <div class="w3-twothird w3-container">
       <h1 class="w3-text-green"><a href= "http://www.businessinsider.com/everyday-items-developed-by-nasa-2012-8"> Buisness Insider List of benefits </a> </h1>
-      <p>and this would be the wall of text that I was talking about, except again, again</p>
+      <p>and this would be the wall of text that I was talking about, except again, again
 	  <br> Spector, Dina. “20 Everyday Things We Have Because Of NASA.” Business Insider, Business Insider, Inc, July 2012, www.businessinsider.com/everyday-items-developed-by-nasa-2012-8. 
+		</p>
 	</div>
   </div>
 
