--- a/ENG105.html
+++ b/ENG105.html
@@ -38,7 +38,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
   <div class="w3-row w3-padding-64">
     <div class="w3-twothird w3-container">
       <h1 class="w3-text-blue">ENG 105</h1>
-      <p>Annotated Bibliography </p>
+      <p>Annotated Bibliography, All Source titles are links. </p>
     </div>
 
   </div>
@@ -80,7 +80,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
   <div class="w3-row w3-padding-32">
     <div class="w3-twothird w3-container">
       <h1 class="w3-text-green"><a href= "http://www.businessinsider.com/everyday-items-developed-by-nasa-2012-8"> Buisness Insider List of benefits </a> </h1>
-      <p>and this would be the wall of text that I was talking about, except again, again
+      <p>This source provides a short list of products from NASA, and more importantly, has a much longer list also included. The list however has a broken link to NASA’s website, but it does list 25 common items that were either developed directly by NASA, or were developed by partner companies of NASA, or finally were developed thanks to new tech from NASA. Most of these items are in use in everyone’s daily life either directly or indirectly, and the benefits of them can be easily seen. The article also includes Tiger woods, and how Tech in random industries was developed thanks to NASA, including metal used for golf clubs Some of the tech listed isn’t that important, and other’s listed are used mostly in either medicine or situational. But the tech existing is important for most people, as with expensive medical procedures, such as CAT scans and MRI’s, the one time you do use it, it may save your life. The source has several broken links and is certainly non-academic, but is an interesting look at the benefits of NASA coming from a more fiscally concerned news outlet. This source was to diversify the opinions that NASA is beneficial from just science journals and the Organization itself 
 	  <br> Spector, Dina. “20 Everyday Things We Have Because Of NASA.” Business Insider, Business Insider, Inc, July 2012, www.businessinsider.com/everyday-items-developed-by-nasa-2012-8. 
 		</p>
 	</div>
